--- a/tsconfig.json
+++ b/tsconfig.json
@@ -93,7 +93,6 @@
     // "allowUnreachableCode": true,                     /* Disable error reporting for unreachable code. */
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
-    "skipLibCheck": true, /* Skip type checking all .d.ts files. */
-    "watch": true
+    "skipLibCheck": true /* Skip type checking all .d.ts files. */
   }
 }
