--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "webpack-dev-server": "^4.13.3"
   },
   "devDependencies": {
+    "@redux-devtools/extension": "^3.2.5",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.5",
     "@types/react-dom": "^18.2.3",
@@ -39,7 +40,6 @@
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
     "@webpack-cli/serve": "^2.0.2",
-    "html-webpack-plugin": "^5.5.1",
-    "redux-devtools-extension": "^2.13.9"
+    "html-webpack-plugin": "^5.5.1"
   }
 }
