--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,6 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-.firebase
-.firebaserc
-firebase.json
+# .firebase
+# .firebaserc
+# firebase.json
