Firebase deploy test

--- a/.github/workflows/firebase-hosting-merge.yml
+++ b/.github/workflows/firebase-hosting-merge.yml
@@ -17,3 +17,7 @@ jobs:
           firebaseServiceAccount: '${{ secrets.FIREBASE_SERVICE_ACCOUNT_DIGITAL_HUB_3505B }}'
           channelId: live
           projectId: digital-hub-3505b
+      name: Build
+      run: |
+        npm install
+        npm run build
