--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 
 # production
 /build
+/build-netlify
 
 # misc
 .DS_Store
@@ -21,6 +22,8 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+.vscode
 
 # .firebase
 # .firebaserc
