--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "1.0.0",
   "description": "digital hub frontend",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "build": "webpack --mode production",
-    "dev": "webpack serve --mode development",
+    "build": "tsc && vite build",
+    "dev": "vite",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "whysopaul",
@@ -13,9 +14,6 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
     "axios": "^1.4.0",
-    "css-loader": "^6.7.3",
-    "file-loader": "^6.2.0",
-    "less-loader": "^11.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.5",
@@ -23,13 +21,7 @@
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
-    "style-loader": "^3.3.2",
-    "ts-loader": "^9.4.2",
-    "typescript": "^5.0.4",
-    "url-loader": "^4.1.1",
-    "webpack": "^5.82.0",
-    "webpack-cli": "^5.0.2",
-    "webpack-dev-server": "^4.13.3"
+    "typescript": "^5.0.4"
   },
   "devDependencies": {
     "@redux-devtools/extension": "^3.2.5",
@@ -39,7 +31,8 @@
     "@types/react-redux": "^7.1.25",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
-    "@webpack-cli/serve": "^2.0.2",
-    "html-webpack-plugin": "^5.5.1"
+    "@vitejs/plugin-react": "^4.1.0",
+    "less": "^4.2.0",
+    "vite": "^4.4.11"
   }
 }
