react-snap, react-helmet-async, search fixes

--- a/package.json
+++ b/package.json
@@ -3,19 +3,27 @@
   "version": "1.0.0",
   "description": "digital hub frontend",
   "main": "index.js",
-  "type": "module",
   "scripts": {
-    "build": "tsc && vite build",
-    "dev": "vite",
+    "build": "webpack --mode production",
+    "postbuild": "react-snap",
+    "dev": "webpack serve --mode development",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "whysopaul",
   "license": "ISC",
+  "reactSnap": {
+    "port": 8080,
+    "puppeteer": {
+      "cache": false
+    },
+    "fixWebpackChunksIssue": false
+  },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^1.3.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.1",
     "redux": "^4.2.1",
@@ -31,8 +39,17 @@
     "@types/react-redux": "^7.1.25",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
-    "@vitejs/plugin-react": "^4.1.0",
-    "less": "^4.2.0",
-    "vite": "^4.4.11"
+    "@webpack-cli/serve": "^2.0.5",
+    "css-loader": "^6.8.1",
+    "esbuild-loader": "^4.0.2",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.3",
+    "less-loader": "^11.1.3",
+    "react-snap": "^1.23.0",
+    "style-loader": "^3.3.3",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.88.2",
+    "webpack-cli": "^5.1.4",
+    "webpack-dev-server": "^4.15.1"
   }
 }
