--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "description": "digital hub frontend",
   "main": "index.js",
   "scripts": {
-    "firebase-build": "webpack --mode production",
-    "build": "webpack --mode production",
+    "firebase-build": "tsc && vite build",
+    "build": "tsc && vite build",
     "postbuild": "react-snap",
-    "dev": "webpack serve --mode development",
+    "dev": "vite",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "whysopaul",
   "license": "ISC",
   "reactSnap": {
     "port": 8080,
+    "source": "dist",
     "puppeteer": {
       "cache": false
     },
@@ -40,17 +41,9 @@
     "@types/react-redux": "^7.1.25",
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
-    "@webpack-cli/serve": "^2.0.5",
-    "css-loader": "^6.8.1",
-    "esbuild-loader": "^4.0.2",
-    "file-loader": "^6.2.0",
-    "html-webpack-plugin": "^5.5.3",
-    "less-loader": "^11.1.3",
+    "@vitejs/plugin-react": "^1.3.2",
+    "less": "^4.2.0",
     "react-snap": "^1.23.0",
-    "style-loader": "^3.3.3",
-    "url-loader": "^4.1.1",
-    "webpack": "^5.88.2",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^4.15.1"
+    "vite": "^2.9.15"
   }
 }
