service page imports fix

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,7 +18,7 @@
     "jsx": "react-jsx",
     /* Linting */
     "strict": false,
-    "noUnusedLocals": false,
+    "noUnusedLocals": true,
     "noUnusedParameters": false,
     "noFallthroughCasesInSwitch": true
   },
