--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
     "axios": "^1.4.0",
+    "dompurify": "^3.0.6",
+    "html-react-parser": "^5.0.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
@@ -36,6 +38,7 @@
   },
   "devDependencies": {
     "@redux-devtools/extension": "^3.2.5",
+    "@types/dompurify": "^3.0.5",
     "@types/node": "^20.0.0",
     "@types/react": "^18.2.5",
     "@types/react-dom": "^18.2.3",
